\Ulimo commit del dia

--- a/templates/warehouse_form.html
+++ b/templates/warehouse_form.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "panel/base.html" %}
 {% block content %}
 <div class="container mt-4">
   <h2>{{ is_edit|yesno:"Editar Warehouse,Crear nuevo Warehouse" }}</h2>
