--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "panel/base.html" %}
 {% block content %}
 <div class="container mt-4">
   <h1 class="mb-4">Panel de Administración</h1>
