--- a/templates/confirm_delete.html
+++ b/templates/confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "panel/base.html" %}
 {% block content %}
 <div class="container mt-4">
   <h2>¿Eliminar Warehouse {{ warehouse.wr_number }}?</h2>
