--- a/templates/panel/base.html
+++ b/templates/panel/base.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Favicon (opcional) -->
-  <link rel="icon" href="{% static 'favicon.ico' %}" />
+  <link rel="icon" href="{% static 'logoNoBg.svg' %}" />
 
   <style>
     body {
@@ -68,6 +68,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'create_warehouse' %}active{% endif %}" href="{% url 'create_warehouse' %}">Nuevo Warehouse</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if request.resolver_match.url_name == 'create_warehouse' %}active{% endif %}" href="{% url 'dispatch_list' %}">Solicitudes de despacho</a>
           </li>
         </ul>
 
