--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -53,6 +53,7 @@
           <th>Cliente</th>
           <th>Shipper</th>
           <th>Carrier</th>
+          <th>Container #</th>
           <th>Fecha</th>
           <th style="width: 260px;">Acciones</th>
         </tr>
@@ -61,9 +62,10 @@
         {% for w in warehouses %}
         <tr>
           <td><strong>WR{{ w.wr_number }}</strong></td>
-          <td>{{ w.cliente.username }}</td>
+          <td>{{ w.cliente.get_full_name }}</td>
           <td>{{ w.shipper }}</td>
           <td>{{ w.carrier }}</td>
+          <td>{{ w.container_number }}</td>
           <td>{{ w.created_at|date:"d/m/Y H:i" }}</td>
           <td>
             <a href="{% url 'admin_warehouse_detail' w.wr_number %}" class="btn btn-sm btn-outline-info">Ver</a>
